welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:8: error: not found: value vuBiscuit
	if (vuBiscuit()==true)
            ^Program:4: error: type mismatch;
 found   : Unit
 required: Boolean
for (i<-0 to 5)
      ^